# Industrial-Safety-PPE-Detection

./: .gitignore  playbook.md  pyproject.toml
configs/site_safety_monitor/corpus/: annotation_rules.yaml  bert_corpus_rules.yaml  osha_1910_sources.yaml
configs/site_safety_monitor/safety/: default.yaml
configs/site_safety_monitor/scene_graph/: default.yaml
configs/site_safety_monitor/text_ie/: default.yaml  manufacturing.yaml
data/annotation_guidelines/: manufacturing_text_ie.md
data/annotations/: manufacturing_text_ie_annotation_seed.jsonl  manufacturing_text_ie_full_gold.jsonl  manufacturing_text_ie_full_overrides.json
data/ontology/: aliases.yaml  canonical_entities.yaml  sh17_mapping.yaml
docs/datasets/: manufacturing-corpus.md
docs/paper-notes/: automatic_construction_hazard_identification_detailed_notes.md  computer_vision_based_hazard_identification_vrd_ontology_detailed_notes.md  sh17_dataset_detailed_notes.md
docs/products/: site_safety_monitor.md
docs/superpowers/plans/: 2026-05-26-manufacturing-corpus-prep-plan.md  (+3 more)
scripts/: _bootstrap.py  build_text_ie_dataset.py  crawl_osha_corpus.py  eval_scene_graph.py  eval_text_ie.py  infer_text_ie.py  materialize_full_text_ie_annotations.py  prepare_bert_corpus.py  prepare_sh17_derivative.py  prepare_text_ie_candidates.py  prepare_text_ie_pilot.py  prepare_text_triples.py  run_site_safety_monitor.py  train_scene_graph.py  train_text_ie.py
src/site_safety_monitor/: __init__.py
tests/integration/: test_end_to_end.py  test_manufacturing_prep_smoke.py  test_text_ie_training_smoke.py
(+57 files in other folders)
