[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-safety-monitor"
version = "0.1.0"
description = "Schema-driven site safety monitoring inspired by the 2023 multimodal hazard identification paper."
readme = "docs/products/site_safety_monitor.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]
ml = [
  "torch>=2.0",
  "transformers>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
